--- a/LunarChatSharp/LunarChatSharp.csproj
+++ b/LunarChatSharp/LunarChatSharp.csproj
@@ -4,6 +4,23 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Title>Lunar Chat Sharp</Title>
+    <Version>1.0.0</Version>
+    <Authors>Builderb</Authors>
+    <Company>Fluxpoint Development</Company>
+    <RepositoryUrl>https://github.com/FluxpointDev/LunarChatSharp</RepositoryUrl>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
+    <DebugType>portable</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
+    <DebugType>portable</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
